--- a/.github/workflows/Main Self build.yml
+++ b/.github/workflows/Main Self build.yml
@@ -18,9 +18,9 @@ jobs:
 
       - name: Check New Commit
         run: |
-          upstreamCode=https://github.com/chengxue2020/q215613905-Tbox
+          upstreamCode=https://github.com/intHbl/homeVideoBox
           echo "upstreamCode=$upstreamCode" >> $GITHUB_ENV
-          commit=$(curl -sL $upstreamCode/commits/main |grep -o '/chengxue2020/q215613905-Tbox/commit/[a-z0-9]\+' |head -1 | cut -d\/ -f5)
+          commit=$(curl -sL $upstreamCode/commits/main |grep -o '/intHbl/homeVideoBox/commit/[a-z0-9]\+' |head -1 | cut -d\/ -f5)
           if ! git log --oneline |grep -q "$commit"; then
             echo "commit=$commit" >> $GITHUB_ENV
             echo "commitS=${commit:0:7}" >> $GITHUB_ENV
