--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -57,12 +57,12 @@ jobs:
           chmod +x gradlew
           ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
           
-      - name: Build Debug With Gradle
-        if: ${{ env.commit }}
-        working-directory: TVBoxOSC
-        run: |
-          chmod +x gradlew
-          ./gradlew assembledebug --build-cache --parallel --daemon --warning-mode all
+      # - name: Build Debug With Gradle
+      #   if: ${{ env.commit }}
+      #   working-directory: TVBoxOSC
+      #   run: |
+      #     chmod +x gradlew
+      #     ./gradlew assembledebug --build-cache --parallel --daemon --warning-mode all
           
       - name: Prepare App
         if: ${{ env.commit }}
