--- a/.github/workflows/build_main.yml
+++ b/.github/workflows/build_main.yml
@@ -77,16 +77,16 @@ jobs:
             mv "$file" apk/homeVideoBox_${{ env.tag }}_Debug.apk
           done
 
-      - name: Release Note
-        if: ${{ env.commit }}
-        working-directory: TVBoxOSC
-        run: |
-          echo -e "Credit: Commit: ${{ env.commit }}\nChangelog:" > apk/homeVideoBox-Release.log
-          if [ "${{ env.commit }}" == "${lastCommit}" ]; then
-            git log --pretty=format:%B ${{ env.commitS }} -1 |sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' |cat -n |sort -k2,2 -k1,1n |uniq -f1 |sort -k1,1n |cut -f2- >> apk/${{ matrix.userName }}-Release.log
-          else
-            git log --pretty=format:%B ${{ env.commitS }}...${lastCommit:0:7} |sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' |cat -n |sort -k2,2 -k1,1n |uniq -f1 |sort -k1,1n |cut -f2- >> apk/${{ matrix.userName }}-Release.log
-          fi
+      # - name: Release Note
+      #   if: ${{ env.commit }}
+      #   working-directory: TVBoxOSC
+      #   run: |
+      #     echo -e "Credit: Commit: ${{ env.commit }}\nChangelog:" > apk/homeVideoBox-Release.log
+      #     if [ "${{ env.commit }}" == "${lastCommit}" ]; then
+      #       git log --pretty=format:%B ${{ env.commitS }} -1 |sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' |cat -n |sort -k2,2 -k1,1n |uniq -f1 |sort -k1,1n |cut -f2- >> apk/${{ matrix.userName }}-Release.log
+      #     else
+      #       git log --pretty=format:%B ${{ env.commitS }}...${lastCommit:0:7} |sed -e "s# \{2,\}#\n#g" -e "/^Merge \(pull\|branch\|remote\)/d" -e '/^$/d' |cat -n |sort -k2,2 -k1,1n |uniq -f1 |sort -k1,1n |cut -f2- >> apk/${{ matrix.userName }}-Release.log
+      #     fi
       
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v3
