100th: new round

--- a/.github/workflows/build_main_debug.yml
+++ b/.github/workflows/build_main_debug.yml
@@ -1,4 +1,10 @@
-name: Main Self build
+name: Main Self debug
+## get activity
+# dumpsys activity top | grep "ACTIVITY"
+## first:
+# am start -D -n "package/package.SomeActivity"
+## THEN:
+# adb logcat
 
 on:
   push:
