--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        applicationId 'com.github.tvbox.osc.home'
+        applicationId 'com.github.tvbox.osc.homeLauncher'
         minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
