ok: 在 添加站点推荐 之前都OK了. (新功能:vod长按menu切换音轨.)

--- a/.github/workflows/build_main_debug.yml
+++ b/.github/workflows/build_main_debug.yml
@@ -1,6 +1,8 @@
 name: Main Self debug
 ## get activity
 # dumpsys activity top | grep "ACTIVITY"
+# am monitor
+##
 ## first:
 # am start -D -n "package/package.SomeActivity"
 ## THEN:
